OpenRewrite migrate to Spring Boot 3.3